; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/doc/extr_chew.c_strip_trailing_newlines.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/doc/extr_chew.c_strip_trailing_newlines.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@tos = common dso_local global %struct.TYPE_3__* null, align 8
@pc = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @strip_trailing_newlines to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @strip_trailing_newlines() #0 {
  br label %1

1:                                                ; preds = %26, %0
  %2 = load %struct.TYPE_3__*, %struct.TYPE_3__** @tos, align 8
  %3 = load %struct.TYPE_3__*, %struct.TYPE_3__** @tos, align 8
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = sub nsw i64 %5, 1
  %7 = call signext i8 @at(%struct.TYPE_3__* %2, i64 %6)
  %8 = call i64 @isspace(i8 zeroext %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %19, label %10

10:                                               ; preds = %1
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** @tos, align 8
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** @tos, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = sub nsw i64 %14, 1
  %16 = call signext i8 @at(%struct.TYPE_3__* %11, i64 %15)
  %17 = sext i8 %16 to i32
  %18 = icmp eq i32 %17, 10
  br i1 %18, label %19, label %24

19:                                               ; preds = %10, %1
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** @tos, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = icmp sgt i64 %22, 0
  br label %24

24:                                               ; preds = %19, %10
  %25 = phi i1 [ false, %10 ], [ %23, %19 ]
  br i1 %25, label %26, label %31

26:                                               ; preds = %24
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** @tos, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = add nsw i64 %29, -1
  store i64 %30, i64* %28, align 8
  br label %1

31:                                               ; preds = %24
  %32 = load i32, i32* @pc, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* @pc, align 4
  ret void
}

declare dso_local i64 @isspace(i8 zeroext) #1

declare dso_local signext i8 @at(%struct.TYPE_3__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
